--- a/PiGameConsole/PiGameConsole/PiGameConsole/MainWindow.xaml
+++ b/PiGameConsole/PiGameConsole/PiGameConsole/MainWindow.xaml
@@ -5,37 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PiGameConsole"
         mc:Ignorable="d"
-        Title="MainWindow" Height="380" Width="525">
-    <Grid>
-		<Grid>
-			<StackPanel>
-				<TextBlock Margin="10" FontSize="20">The Witcher 3</TextBlock>
-				<Button Margin="10" Click="Button_Click_Buy">
+        Title="MainWindow" Height="350" Width="525">
+	<Grid>
+		<StackPanel>
+			<TextBlock Margin="10" FontSize="20">Select a Game</TextBlock>
+			<ListBox x:Name="listBox" Height="100" SelectionChanged="OnListItemSelect" SelectionMode="Single" Initialized="ListBoxItem_Initialized">
+			</ListBox>
+			<TextBox Name="tb" Width="Auto" Height="30"></TextBox>
+			<Grid>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="*" />
+				</Grid.ColumnDefinitions>
+				<Button Margin="10" Click="Button_Click_Buy" Grid.Column="0">
 					Buy
 				</Button>
-				<Button Margin="10" Click="Button_Click_Install">
+				<Button Margin="10" Click="Button_Click_Install" Grid.Column="1">
 					Install
 				</Button>
-				<Button Margin="10" Click="Button_Click_Play">
+				<Button Margin="10" Click="Button_Click_Play" Grid.Column="2">
 					Play
 				</Button>
-				<Button Margin="10" Click="Button_Click_Stop">
+				<Button Margin="10" Click="Button_Click_Stop" Grid.Column="3">
 					Stop
 				</Button>
-				<Button Margin="10" Click="Button_Click_Uninstall">
+				<Button Margin="10" Click="Button_Click_Uninstall" Grid.Column="4">
 					Uninstall
 				</Button>
-				<TextBlock Margin="10" FontSize="20">Deus Ex</TextBlock>
-				<Button Margin="10" Click="Button_Click_Buy_DE">
-					Buy
-				</Button>
-				<Button Margin="10" Click="Button_Click_Install_DE">
-					Install
-				</Button>
-				<Button Margin="10" Click="Button_Click_Play_DE">
-					Play
-				</Button>
-			</StackPanel>
-		</Grid>
+			</Grid>
+		</StackPanel>
 	</Grid>
 </Window>
