--- a/PiGameConsole/PiGameConsole/PiGameConsole/MainWindow.xaml
+++ b/PiGameConsole/PiGameConsole/PiGameConsole/MainWindow.xaml
@@ -9,9 +9,9 @@
 	<Grid>
 		<StackPanel>
 			<TextBlock Margin="10" FontSize="20">Select a Game</TextBlock>
-			<ListBox x:Name="listBox" Height="100" SelectionChanged="OnListItemSelect" SelectionMode="Single" Initialized="ListBoxItem_Initialized">
+			<ListBox x:Name="listBox" Height="100" SelectionChanged="OnListItemSelect" SelectionMode="Single" Initialized="ListBoxItem_Initialized" SelectedIndex="0">
 			</ListBox>
-			<TextBox Name="tb" Width="Auto" Height="30"></TextBox>
+			<!--<TextBox Name="tb" Width="Auto" Height="30"></TextBox>-->
 			<Grid>
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="*" />
@@ -20,19 +20,19 @@
 					<ColumnDefinition Width="*" />
 					<ColumnDefinition Width="*" />
 				</Grid.ColumnDefinitions>
-				<Button Margin="10" Click="Button_Click_Buy" Grid.Column="0">
+				<Button Margin="10" Click="Button_Click_Buy" Grid.Column="0" Name="BuyButton">
 					Buy
 				</Button>
-				<Button Margin="10" Click="Button_Click_Install" Grid.Column="1">
+				<Button Margin="10" Click="Button_Click_Install" Grid.Column="1" Name="InstallButton">
 					Install
 				</Button>
-				<Button Margin="10" Click="Button_Click_Play" Grid.Column="2">
+				<Button Margin="10" Click="Button_Click_Play" Grid.Column="2" Name="PlayButton">
 					Play
 				</Button>
-				<Button Margin="10" Click="Button_Click_Stop" Grid.Column="3">
+				<Button Margin="10" Click="Button_Click_Stop" Grid.Column="3" Name="StopButton">
 					Stop
 				</Button>
-				<Button Margin="10" Click="Button_Click_Uninstall" Grid.Column="4">
+				<Button Margin="10" Click="Button_Click_Uninstall" Grid.Column="4" Name="UninstallButton">
 					Uninstall
 				</Button>
 			</Grid>
